# TermostatBox3

./: CMakeLists.txt  Doxyfile  README.md  READMESTAR.md  display_manager.staradeluje  main.c.primer  preberi.txt
components/display_manager/: CMakeLists.txt  README.md  display_manager.c
components/display_manager/include/: display_manager.h
latex/: EVE__config_8h_source.tex  Series_2gc255_20x40A_2vg__lite__options_8h_source.tex  Series_2gc355_20x0__1216_2vg__lite__options_8h_source.tex  audio__codec__gpio__if_8h_source.tex  audio__codec__if_8h_source.tex  audio__codec__sw__vol_8h_source.tex  audio__codec__vol__if_8h_source.tex  aw88298__dac_8h_source.tex  biginteger_8h_source.tex  bootloader_2config_2sdkconfig_8h_source.tex  bsp__err__check_8h_source.tex  button__adc_8h_source.tex  cjc8910__codec_8h_source.tex  cjc8910__reg_8h_source.tex  classAutoUTFOutputStream.tex  classBasicIStreamWrapper.tex  classBasicOStreamWrapper.tex  classCrtAllocator.tex  classCursorStreamWrapper.tex  classEncodedInputStream_3_01UTF8_3_4_00_01MemoryStream_01_4.tex  classEncodedOutputStream.tex  classGenericArray.tex  classGenericDocument.tex  classGenericDocument__coll__graph.md5  classGenericMember.tex  classGenericMemberIterator.tex  classGenericPointer.tex  classGenericPointer_1_1PercentEncodeStream.tex  classGenericPointer__coll__graph.md5  classGenericReader.tex  classGenericSchemaDocument.tex  classGenericSchemaValidator.tex  classGenericStreamWrapper.tex  classGenericStreamWrapper__inherit__graph.md5  (+2844 more)
main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.c
(+11519 files in other folders)
